--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <canvas width="800" height = "500" id="canvas"></canvas>
+        <h1>Hello</h1>
         <script src="js/main.js"></script>
     </body>
 </html>
